Query param for query

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <body onload="start()">
 <script src="./index.js"></script>
 <div style="display: flex; flex-direction: column; max-width: 400px; margin: 0 auto">
-    <input id="query" value="st:expansion game:paper" placeholder="Scryfall query">
+    <h3>Checkpoint Officer</h3>
+    <input id="query" placeholder="Scryfall query">
     <br>
     <textarea style="height: 300px" id="cardList" placeholder="Card list"></textarea>
     <br>
